--- a/app/views/inform_mailer/discuss_reply.html.erb
+++ b/app/views/inform_mailer/discuss_reply.html.erb
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-		<p>
-			請點以下網址回覆~ <%=link_to "https://plus.nctu.edu.tw/discusses/#{@discuss.id}","https://plus.nctu.edu.tw/discusses/#{@discuss.id}"%><br>
-      內容:
-		</p>
-		<h4><%=simple_format @sub_discuss.content%></h4>
-		<p>
-			<%=link_to "NCTU+","https://plus.nctu.edu.tw/"%> 交大智慧校園系統<br>
-			Brilliant College Life
-		</p>
-	</body>
-</html>
+<p>
+	請點<%=link_to "此連結","https://plus.nctu.edu.tw/discusses/#{@discuss.id}"%>回覆~<br>
+	<br>
+	--------------------------------<br>
+	此為系統自動回傳信件請勿回復<br>
+	<%=link_to "NCTU+","https://plus.nctu.edu.tw/"%> 交大智慧校園系統<br>
+	Brilliant College Life
+</p>
