reactjs first commit

--- a/app/views/course_maps/content.html.erb
+++ b/app/views/course_maps/content.html.erb
@@ -5,30 +5,28 @@ th, td {
 </style>
 <div class="row" style="margin-left:10px;" >
 	<div class="row">
-		<div class="col-md-3 well" id="search_div"></div>
+		<div class="col-md-3 well" id="search_div" />
 		<div class="col-md-6 well">
-			<div class="row" id="new_form_div"></div>	
-			<div class="row" id="header_content_div"></div>
-			<div class="row" id="course_content"></div>
+			<div class="row" id="new_form_div" />	
+			<div class="row" id="header_content_div" />
+			<div class="row" id="course_content" />
 		</div>
 		<div class="col-md-3 col-sm-5 well">
 			
 			<ul id="myTab" class="nav nav-tabs" role="tablist">
-		      <li role="presentation" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">課程總覽</a></li>
-		      <li role="presentation" class=""><a href="#group" role="tab" id="group-tab" data-toggle="tab" aria-controls="group" aria-expanded="false">課程群組</a></li>
-		      <small id="alert-msg"></small>
-		     
-		    </ul>
-		    <div id="myTabContent" class="tab-content">
-		      <div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab">
-				<div id="course_tree"></div>
-		      </div>
-		      <div role="tabpanel" class="tab-pane fade" id="group" aria-labelledby="group-tab">
-		        <div id="group_tree">0.0</div>
-		      </div>
-		      
-		    </div>		
-		
+				<li role="presentation" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">課程總覽</a></li>
+				<li role="presentation" class=""><a href="#group" role="tab" id="group-tab" data-toggle="tab" aria-controls="group" aria-expanded="false">課程群組</a></li>
+				<small id="alert-msg" />
+			 
+			</ul>
+			<div id="myTabContent" class="tab-content">
+				<div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab">
+					<div id="course_tree" />
+				</div>
+				<div role="tabpanel" class="tab-pane fade" id="group" aria-labelledby="group-tab">
+					<div id="group_tree" />
+				</div>		
+			</div>		
 			
 		</div>
 	</div>
