--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,20 @@
   <% else %>
     <meta name="description" content="NCTU+ 交大智慧選課系統">  
 	<% end %>
-	
+
+	<script>
+	<% if Rails.env.production? %>
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54567036-1', 'auto');
+  ga('send', 'pageview');
+<% end %>
+</script>
+
 </head>
 
 <body id="page-top" style="background-color:#e9eaed;">
@@ -61,6 +74,7 @@
 
 
 </body>
+
 <script>
 	$(document).ready(function() {
 
@@ -76,17 +90,6 @@
 		  <% end %>
 		<% end %>		
 	});
-<% if Rails.env.production? %>
-
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-54567036-1', 'auto');
-  ga('send', 'pageview');
-
-<% end %>
 </script>
 	
 </html>
