--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,72 +1,40 @@
-<%= stylesheet_link_tag "fullcalendar/fullcalendar.min", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "fullcalendar/moment.min", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "fullcalendar/fullcalendar.min", "data-turbolinks-track" => true %>
-
-<script>
-
-	$(document).ready(function() {
-		var events=<%=@event_data.html_safe%>;
-		$('#calendar').fullCalendar({
-			header:{
-				left: "prev,next",
-				center: "title",
-				right: "month,agendaWeek,agendaDay"
-			},
-			selectable: true,
-			selectHelper: true,
-			select: function(start,end){
-				if(confirm("是否在此時間開新活動?")){
-					window.location="/events/new?start="+start+"&end="+end;
-				}
-			},
-			events: events,
-			eventClick: function(calEvent, jsEvent, view) {
-				window.location="/events/"+calEvent.id;
-				/*
-        console.log('Event: ' + calEvent.id);
-        console.log('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
-        console.log('View: ' + view.name);
-
-        // change the border color just for fun
-        $(this).css('border-color', 'red');
-				*/
-			},
-			
-		});
-	});
-
-</script>
 <style>
-	#calendar {
-		max-width: 900px;
-		margin: 0 auto;
-	}
-	.fc-event{
-    cursor: pointer;
-	}
-	.講座{
-		background-color: #33135B;
-		border-color: #33135B;
-	}
-	.表演{
-		background-color: #3a87ad;
-		border-color: #3a87ad;
-	}
-	.比賽{
-		background-color: #6C9C2A;
-		border-color: #6C9C2A;
-	}
-	.擺攤{
-		background-color: #B16919;
-		border-color: #B16919;
-	}
-	.其他{
-		background-color: #922D1B;
-		border-color: #922D1B;
-	}
 </style>
-<div class="col-md-offset-2">
-	<%=link_to "新增活動",new_event_path,class:"btn btn-info","data-no-turbolink"=>true%>
+<%= stylesheet_link_tag "events", media: "all", "data-turbolinks-track" => true %>
+
+<div id="main-container" class="container center-block" style="" bg-white>
+	<form class="search-block form-horizontal form-group center-block col-md-12" role="form">
+		<div class="wapper">
+			<%=link_to "新增活動",new_event_path,class:"btn btn-info col-md-1","data-no-turbolink"=>true%>
+			<div class="col-md-1">
+				<button type="submit" class="btn btn-primary">找活動</button>
+			</div>
+			<div class="col-md-7">
+				<input type="activities" class="form-control" id="activitiesInput" placeholder="輸入活動名稱">
+			</div>
+		</div>
+	</form>
+
+	<div id="events-theme1">
+		<h1>近期活動</h1>
+		<div id="events-container1" class="events-container" style="">
+			<% @events.each do |event| %>
+			<div class="event-block">
+				<!--small class="event_type"><%=event.event_type%></small-->
+				<small class="event_type"><%=event.get_time%></small>
+				<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block-top" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
+					<%=image_tag(event.cover.url, :class => "img-responsive img-rounded poster", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
+				</div>
+				<div class="event-block-bottom">
+					<p class="event_title text-right"><%=event.organization%> <strong><%=event.title%></strong></p>
+					<small class="event_location"><%=event.location%></small>
+				</div>
+			</div>
+			<% end %>
+		</div>
+	</div>
+	<div id="events-theme2">
+		<h1>主題活動</h1>
+	</div>
 </div>
-<br>
-<div id='calendar' class="bg-white"></div>
+
