--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,18 @@
 <div class="footer">
-	&copy; Copy Right NCTU+ 2015 
+	&copy; Copyright NCTU+ 2015 
 	<a href="https://www.facebook.com/nctuplus" style="color:white;" target="blank">
 		<i class="fa fa-2x fa-facebook-square text-light" style="line-height:50px;margin-left:20px;outline:none;"></i>
 	</a>
 	<a href="https://github.com/t6847kimo/nctuplus/" style="text-decoration:none;color:white" target="blank">
 		<i class="fa fa-2x fa-github-square text-light" style="line-height:50px;margin-left:8px;outline:none;"></i>
 	</a>
+	<a href="mailto:nctuplus@gmail.com" style="text-decoration:none;color:white;">
+		<i class="fa fa-envelope text-light" style="font-size:28px;margin-left:8px;outline:none;"></i>
+	</a>
 	<!--
 	<a href="https://www.facebook.com/messages/nctuplus" style="text-decoration:none;color:white;font-size:12px;" target="blank">
 		<i class="fa fa-2x fa-send text-light" style="line-height:45px;margin-left:8px;outline:none;"></i>
 	</a>
 	-->
-	<!--<i class="fa fa-2x fa-envelope wow bounceIn text-light" style="line-height:50px;margin-left:10px;"></i>
-	-->
+	
 </div>
