--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,11 +1,23 @@
 <%= javascript_include_tag "books", "data-turbolinks-track" => true %>
 
 <div id="main-container" class="container bg-white">
-  <div class="row">
+	<div class="row">
     <div class="col-md-7 col-md-offset-2">
 			<h1>我要賣書</h1>
+			<br>
+			<h4>Step1.選擇適用課程 - <span class="text-center" id="ct-id" data="<%=@ct.try(:id)%>"><%=@ct.try(:course_ch_name)%>/<%=@ct.try(:teacher_name)%></span></h4>
+			<div id="cts-search-form"></div>
+			<div class="row">
+				<div class="col-md-10">
+					<a id="show-all-li" class="hidden" href="javascript:void(0);" onclick="$('#cts-list').find('li').removeClass('hidden');$('#cts-list').find('.more').remove();">展開</a>
+					<ul id="cts-list"></ul>
+				</div>
+			</div>
+			<hr>
+			<h4>Step2.輸入書名以及內容</h4>
       <%= form_for @sale_book, :url => { :controller => 'books', :action => @sale_book.new_record? ? 'create' : "update" }, :html=>{class: "form-horizontal",multipart: true,id:"book_trade_info-form"} do |f| %>
         <div class="form-group">
+					<%=hidden_field_tag :cts_id_list %>
           <label class="col-sm-2 control-label">書名</label>
 					<div class="col-sm-10">
 						<div class="input-group">
@@ -52,29 +64,6 @@
 					<div class="col-sm-10">
 						<%= f.text_field "price", :class => "form-control integer-only",required: "true" %>
 					</div>
-        </div>
-				<div class="form-group">
-          <label class="col-sm-2 control-label">適用課程</label>
-					<div class="col-sm-10">
-						<div class="input-group">
-							<%=text_field_tag "search-ct","", class:"form-control",placeholder:"輸入課名並搜尋來選擇適用課程"%>
-							<label class="hidden" id="last-ct-search-term"></label>							
-							<div class="input-group-btn">
-								<%=button_tag "搜尋",id:"search-ct-btn", class:"btn btn-success",onclick:"searchCourse();return false;"%>
-							</div>
-						</div>
-						<div class="row">
-							<ul id="cts-list">								
-								<% @sale_book.course_teacherships.each do |cts| %>
-									<li id="<%=cts.id%>">
-										<%=cts.course_ch_name%> | <%=cts.teacher_name%>
-										<a href="javascript:void(0);" onclick="removeCtId(<%=cts.id%>)"><%=fa_icon "times"%></a>
-									</li>
-								<% end %>
-							</ul>
-							<%=hidden_field_tag :cts_id_list %>
-						</div>
-					</div>				
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">書況及說明</label>
@@ -123,12 +112,6 @@
     </div>
   </div>
 </div>
-
-<%= search_form_for @q, url:"/books/cts_search", class:"hidden", remote:"true" do |f| %>
-	<%=f.search_field :course_ch_name_cont%>
-	<%=f.submit%>
-<% end %>
-
 <div class="modal fade" id="book-modal" tabindex="-1" role="dialog" aria-hidden="true" >
 	<div class="modal-dialog" >
 		<div class="modal-content" >
@@ -140,35 +123,21 @@
 	</div>
 </div>
 
-<script type="text/x-tmpl" id="cts-res">
-	<table class="table table-hover" id="cts-res-table">
-		<tr class="">
-			<th></th>
-			<th>課程</th>
-			<th>老師</th>
-		</tr>
-		{% for(var i=0,cts;cts=o[i];i++) { %}
-			<tr class="clickable-hover" id="ct-{%=cts.id%}" onclick="$(this).find('input').click();">
-				<td><input type="checkbox" id="cts-{%=cts.id%}" onchange="addCtid({%=cts.id%},'{%=cts.course_name%}','{%=cts.teacher_name%}');"></td>
-				<td>{%=cts.course_name%}</td>
-				<td>{%=cts.teacher_name%}</td>
-			</tr>
-		{% } %}
-	</table>
-</script>
-
 <script type="text/x-tmpl" id="googlebook-res">
 	<table class="table table-hover">
 		{% if(o.length==0){ %}
-			查無結果!
+			<tr><td>查無結果!</td></tr>
 		{% }else{ %}
+			<tr>
+				<td>封面</td>
+				<td>書名</td>
+				<td>作者</td>
+			</tr>
 			{% for(var i=0,book;book=o[i];i++) { %}
 				{% var desc=book.description ? book.description.replace(/'/g,"\\'") : "";%}
 				{% desc=desc.replace(/"/g,"\\\"");%}
 				<tr class="clickable-hover" onclick="selectBook('{%=book.title%}','{%=book.isbn%}','{%=book.authors%}','{%=book.image_link%}'
 				,'{%=desc%}','{%=book.preview_link%}');">				
-					<td>{%=book.title%}</td>
-					<td>{%=book.authors%}</td>
 					<td>
 						{% if(book.image_link) %}
 							<img src={%=book.image_link%}></img>
@@ -176,8 +145,27 @@
 							無圖片
 						{% } %}
 					</td>
+					<td>{%=book.title%}</td>
+					<td>{%=book.authors%}</td>
+					
 				</tr>
 			{% } %}
 		{% } %}
 	</table>
+</script>
+
+<script>
+	<% if @sale_book.new_record? %>
+	function fillCtListInEdit(){
+		//dummy function,do not remove
+	}
+	<% else %>
+	function fillCtListInEdit(){
+		// show cts list in edit page		
+		<% @sale_book.course_teacherships.each do |cts| %>
+			console.log(<%=cts.id%>);
+			addCtid(<%=cts.id%>,"<%=cts.course_ch_name%>","<%=cts.teacher_name%>");
+		<% end %>
+	}
+	<% end %>
 </script>
