--- a/app/views/discusses/main_form.html.erb
+++ b/app/views/discusses/main_form.html.erb
@@ -1,34 +1,29 @@
 <div id="main-container" class="container bg-white">
   <div class="row">
     <div class="col-md-9 col-md-offset-1">
-			<h1>新增心得</h1>
+			<h1><%=@title%></h1>
 			<br>
 			<h4>Step1.選擇適用課程 - <span class="text-center" id="ct-id" data="<%=@ct.try(:id)%>"><%=@ct.try(:course_ch_name)%>/<%=@ct.try(:teacher_name)%></span></h4>
-			<%= search_form_for @q, url:"/books/cts_search", class:"form-inline", remote:"true" do |f| %>
-				<div class="form-group">
-					<label>適用課程</label>
-					<%=f.search_field :course_ch_name_cont,value:@ct.try(:course_ch_name), class:"form-control",placeholder:"課名",required:"true"%>
-				</div>
-				<%=f.submit "搜尋",id:"search-ct-btn", class:"btn btn-success"%>
-			<% end %>
+			<div id="cts-search-form">
+			</div>
 			<hr>
 			<h4>Step2.輸入標題以及內容</h4>
-			<%=form_for @discuss, :url => {:action => @discuss.new_record? ? 'create' : "update" }, :html=>{class: "form-horizontal"} do |f| %>
+			<%=form_for @discuss, :url => {:action => @discuss.new_record? ? 'create' : "update" }, :html=>{id:"discuss-form",class: "form-horizontal"} do |f| %>
 				<div class="form-group">
-					<label class="col-sm-1 control-label">標題</label>
+					<label class="col-sm-2 control-label">標題</label>
 					<div class="col-sm-10">
 						<%= f.text_field "title", :class => "form-control",required:"true",placeholder:"" %>
 					</div>	
 				</div>
 				<div class="form-group">
-					<label class="col-sm-1 control-label">內容</label>
+					<label class="col-sm-2 control-label">內容</label>
 					<div class="col-sm-10">
 						<%= f.text_area "content", :class => "form-control",required:"true",placeholder:"",rows:"10" %>
 					</div>
 					<%=f.hidden_field "course_teachership_id",value:"#{@ct.try(:id)}" %>
 				</div>
 
-				<div class="col-md-11 text-right">
+				<div class="col-md-12 text-right">
 					<div class="checkbox" style="display:inline-block;">
 						<label style="font-size:18px">
 							<%=f.check_box "is_anonymous"%> 匿名
@@ -36,7 +31,7 @@
 					</div>
 					&nbsp;&nbsp;
 					<button onclick="preview();return false;" class="btn btn-lg btn-success">預覽</button>
-					<%= f.submit "送出",onclick:"return checkCts();", class: "btn btn-lg btn-primary " %>
+					<%= f.submit "送出", class: "btn btn-lg btn-primary " %>
 					<% if !@discuss.new_record? %>
 						<%= link_to '刪除', discuss_path(@discuss), :method => :delete, :data => { :confirm => "確認刪除?" },class:"btn btn-lg btn-danger" %>
 					<% end %>
@@ -48,41 +43,25 @@
 		</div>
 	</div>
 </div>
-<div class="modal fade" id="book-modal" tabindex="-1" role="dialog" aria-hidden="true" >
-	<div class="modal-dialog" >
-		<div class="modal-content" >
-			<div class="modal-header" >
-				<h4 class="modal-title"></h4>
-			</div>
-			<div class="modal-body" ></div>
-		</div>
-	</div>
-</div>
-<script type="text/x-tmpl" id="cts-res">
-	<table class="table table-hover" id="cts-res-table">
-		<tr class="row">
-			<th>課程</th>
-			<th>老師</th>
-		</tr>
-		{% for(var i=0,cts;cts=o[i];i++) { %}
-			<tr class="row clickable-hover" id="ct-{%=cts.id%}" onclick="selectCts('{%=cts.course_name+'/'+cts.teacher_name%}','{%=cts.id%}');">
-				<td>{%=cts.course_name%}</td>
-				<td>{%=cts.teacher_name%}</td>
-			</tr>
-		{% } %}
-	</table>
-</script>
+
 <%=render "modal_content" %>
 
 <script>
-	function checkCts(){
-		var x=$("#discuss_course_teachership_id").val();
-		if(x==""){
-			toastr["warning"]("請先選擇適用課程!");
-			return false;
-		}
-		return true;
-	}
+	$(function(){
+		$("#cts-search-form").load("/search/cts?multi=false");
+		$("#discuss-form").submit(function(){	//check ct selected or not then fill
+			var id=$("#ct-id").attr("data");
+			if(id==""){
+				toastr["warning"]("請先選擇適用課程!");
+				return false;
+			}
+			else{
+				$("#discuss_course_teachership_id").val(id);
+				return true;
+			}
+		});
+	});
+
 	function preview(){
 		var data={
 			isPreview:true,
@@ -98,22 +77,6 @@
 			sub_discusses:[]
 		};
 		showGlobalModal(2,tmpl("discuss-modal-title",data ),tmpl("discuss-modal-content",data),function(){});		
-	}
-	function change_check($obj){
-		if($obj.val()=="false"){
-			$obj.val("true");
-		}
-		else{
-			$obj.val("false");
-		}
-	}
-
-	function selectCts(name,id){
-		toastr["info"]("您已選擇"+name);
-		$('#ct-id').attr('data',id);
-		$('#ct-id').text(name);
-		$("#discuss_course_teachership_id").val(id);
-		$("#book-modal").modal("hide");
 	}
 	
 </script>
