--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -59,7 +59,7 @@
 				</h2>
 				<br><br>
 				<% if !current_user %>
-					<a href="/login" class="btn btn-primary btn-xl page-scroll" style="font-size:20px;font-weight:300;margin-right:20px;">登入</a>
+					<a href="/login" class="btn btn-primary btn-xl page-scroll" style="font-size:20px;font-weight:300;margin-right:20px;" data-no-turbolink>登入</a>
 				<% end %>
 			</div>
 			
@@ -170,14 +170,14 @@ $(document).ready(function(){
 		var aa = ['url(<%=asset_path "bg6.jpg"%>)','url(<%=asset_path "bg5.jpg"%>)','url(<%=asset_path "bg3.jpg"%>)'];
 		var t1=0;
 		setInterval(function() {
-		$('.bg1').fadeOut(5000, function() 
+		$('.bg1').fadeOut(6000, function() 
 		{
 				
-				$('.bg1').css('background-image', aa[t1]).fadeIn(3000);
-				t1++;
+				$('.bg1').css('background-image', aa[++t1]).fadeIn(3000);
+				//t1++;
 				if(t1 == 3) t1 = 0;
 			});
-		},5000)
+		},6000)
 
 });
 
@@ -200,7 +200,7 @@ function re_win(){	//need fix
 		$(".warning").html("<h5>建議以Chrome 或 Firefox瀏覽</h5>");
 		$(".warning").css({'margin-left':'21.4%','margin-top':'5%','color':'#aaa'});
 		<% if !current_user %>
-		$(".btn-inner").html("<div class='btn-remove'><a href='#' class='btn btn-index btn-primary btn-xl page-scroll' style='font-size:16px;font-weight:300;margin-right:20px;margin-left:30%;margin-top:20%;'>登入</a></div>")
+		$(".btn-inner").html("<div class='btn-remove'><a href='/login' data-no-turbolink class='btn btn-index btn-primary btn-xl page-scroll' style='font-size:16px;font-weight:300;margin-right:20px;margin-left:30%;margin-top:20%;'>登入</a></div>")
 		<% end %>
 		
 		$(".header-content-inner").css("margin-top","12%");
