--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -9,7 +9,7 @@
 .event-block{
 	@extend .col-md-3;
 	@extend .col-sm-4;
-	background: white;
+	background: rgba(255, 255, 255, 0.7);
 	height: 200px;
 	border:3px solid #c1eaff;
 	margin: 20px 20px;
@@ -77,8 +77,8 @@
 	//@extend .pull-right;
 	position: absolute;
 	display: overflow;
-	top: 90%;
-	left: 70%;
+	bottom: 10px;
+	right: 20px;
 }
 .events-container{
 	@extend .container;
@@ -88,14 +88,20 @@
 .events-theme{
 	@extend .container;
 	@extend .col-md-12;
+	
+}
+.event-theme-title{
 }
 #events-theme1{
 	@extend .events-theme;
+	background-image: url(<%=asset_path("events/bg_swirl.png")%>);
+	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
 	//background: #66ccff;
 	//background: #ffcc99;
 }
 #events-theme2{
 	@extend .events-theme;
-	background: #66ccff;
+	background-image: url(<%=asset_path("events/bg_pinkRice.png")%>);
+	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+	//background: #66ccff;
 }
-
