add cts search in past_exam

--- a/app/views/discusses/main_form.html.erb
+++ b/app/views/discusses/main_form.html.erb
@@ -61,7 +61,9 @@
 			}
 		});
 	});
-
+	function selectCts(name,id){
+		_selectCts(name,id);
+	}
 	function preview(){
 		var data={
 			isPreview:true,
