--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -1,7 +1,8 @@
+/*@import "bootstrap";
 @import "bootstrap-sprockets";
-@import "bootstrap";
-@import "application";
 
+@import "application";
+*/
 .search-block{
 	height: auto;
 	margin: 30px auto;
