--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,7 @@
-<!--%= stylesheet_link_tag "events", media: "all", "data-turbolinks-track" => true %-->
-<%= stylesheet_link_tag "events" %>
-
 <script>
-<!--
-	$("#content-contaier").css(
-		{
-			overflow: visable;
-		});
--->
+	$(function(){
+		$("#content-contaier").css("overflow","visible");
+	});
 </script>
 
 <div id="main-container" class="container center-block" style="" bg-white>
