--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -35,7 +35,7 @@
 	<h2>開始使用...</h2>
   <h3>	
 		&nbsp;&nbsp;&nbsp;1. <%=link_to '輸入系級',"/user/edit"%> <br> 
-		&nbsp;&nbsp;&nbsp;2. <%=link_to "匯入歷年課程算學分", "/user/import_course"%><br>
+		&nbsp;&nbsp;&nbsp;2. <%=link_to "匯入歷年課程算學分", "/scores/import"%><br>
 		&nbsp;&nbsp;&nbsp;3. <%=link_to'使用模擬排課',"/courses/simulation"%>
 	</h3>
 </div>
@@ -45,7 +45,7 @@
 		<li><a class="tab-link" id='toggle-a' href="#others" data-toggle="tab" url="/user/this_sem?uid=<%=params[:uid]%>" >本學期</a></li>
 		<li><a class="tab-link" id='toggle-b' href="#others" data-toggle="tab" url="/user/all_courses?uid=<%=params[:uid]%>">歷年課程</a></li>
 		<% if !@user.has_imported? %>
-		<li><a class="tab-link" id='toggle-c' href="/user/import_course" onclick="toastr['info']('請先匯入成績!');">畢業學分計算</a></li>
+		<li><a class="tab-link" id='toggle-c' href="/scores/import" onclick="toastr['info']('請先匯入成績!');">畢業學分計算</a></li>
 		<% else %>
 		<li><a class="tab-link" id='toggle-c' href="#others" data-toggle="tab" url="/user/statistics?uid=<%=params[:uid]%>">畢業學分計算</a></li>
 		<% end %>
