--- a/app/views/user/this_sem.html.erb
+++ b/app/views/user/this_sem.html.erb
@@ -17,16 +17,9 @@
 			</h4>
 		</div>
 		<div class="col-md-4">
-			<%=link_to "修改個人資訊","/user/edit", class:"btn btn-primary"%>
-			
-				<%=link_to "/user/import_course", class:"btn btn-primary",id:"import_course" do %>
-					<%=fa_icon "upload" %>匯入課程
-				<% end %>
-
-			<%=link_to "/courses/simulation", class:"btn btn-primary" ,id: "add_course" do %>
-				<%=fa_icon "plus" %>模擬排課
-			<% end %>
-			
+			<%=link_to "修改個人資訊",{ controller: "user", action: "edit"}, class:"btn btn-primary"%>
+			<%=link_to fa_icon("upload")+" 匯入課程",{ controller: "scores", action: "import"}, class:"btn btn-primary",id:"import_course"%>
+			<%=link_to fa_icon("plus")+" 模擬排課",{ controller: "courses", action: "simulation"}, class:"btn btn-primary" ,id: "add_course"%>
 		</div>
 	</div>
 	<br>
